# Vibe-idea

./: README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
pages-dist/: index.html
pages-dist/klinecharts-sse/: index.html
pages-dist/klinecharts-sse/assets/: index-BTGIdZsh.js  index-Dfy24nar.css
pages-dist/three-scatter/: index.html
pages-dist/three-scatter/assets/: index-6-kllIdP.js  index-Bl3jYFky.css  index-Chy53B97.js  index-DXb7f1zX.css
projects/d3-brush-scatter/: index.html  package.json
projects/d3-brush-scatter/src/: App.tsx  styles.css
projects/d3-brush-scatter/src/components/: BrushScatterPlot.tsx
projects/d3-brush-scatter/src/data/: stocks.ts
projects/hardware-control-panel-qt/: .gitignore  CMakeLists.txt  README.md
projects/hardware-control-panel-qt/config/: panel-settings.example.json
projects/hardware-control-panel-qt/docs/: architecture.md  input-design.md  mqtt-protocol.md  porting-guide.md
projects/hardware-control-panel-qt/platform/systemd/: hardware-control-panel.service
projects/hardware-control-panel-qt/src/: CMakeLists.txt  main.cpp
projects/hardware-control-panel-qt/src/app/: AppContext.cpp  AppContext.h  ApplicationBootstrapper.cpp  ApplicationBootstrapper.h
projects/hardware-control-panel-qt/src/domain/alarm/: AlarmState.cpp  AlarmState.h
projects/hardware-control-panel-qt/src/domain/common/: Result.h
projects/hardware-control-panel-qt/src/domain/device/: DeviceCommand.cpp  DeviceCommand.h  DeviceState.cpp  DeviceState.h  IDeviceService.h
projects/hardware-control-panel-qt/src/domain/input/: IInputDevice.h  InputEvent.cpp  InputEvent.h
projects/hardware-control-panel-qt/src/domain/settings/: ISettingsStore.h  PanelSettings.cpp  PanelSettings.h
projects/hardware-control-panel-qt/src/infrastructure/device/: MqttDeviceService.cpp  MqttDeviceService.h
projects/hardware-control-panel-qt/src/infrastructure/input/: EvdevInputDevice.cpp  EvdevInputDevice.h  MockInputDevice.cpp  MockInputDevice.h
projects/hardware-control-panel-qt/src/infrastructure/logging/: LogCategories.cpp  LogCategories.h
projects/hardware-control-panel-qt/src/infrastructure/mqtt/: IMqttClient.h  MockMqttClient.cpp  MockMqttClient.h  QtMqttClient.cpp  QtMqttClient.h
projects/hardware-control-panel-qt/src/infrastructure/settings/: JsonSettingsStore.cpp  JsonSettingsStore.h
projects/hardware-control-panel-qt/src/platform/linux/: LinuxDevicePaths.cpp  LinuxDevicePaths.h
projects/hardware-control-panel-qt/src/presentation/: NavigationController.cpp  NavigationController.h  PanelViewModel.cpp  PanelViewModel.h
projects/hardware-control-panel-qt/src/ui/: Main.qml
projects/hardware-control-panel-qt/src/ui/components/: FocusFrame.qml  HeaderBar.qml  StatusTile.qml
projects/hardware-control-panel-qt/src/ui/pages/: AlarmPage.qml  DiagnosticsPage.qml  SettingsPage.qml  StatusPage.qml
projects/hardware-control-panel-qt/src/ui/theme/: Theme.qml
projects/hardware-control-panel-qt/tests/: CMakeLists.txt  input_mapping_test.cpp  mqtt_command_parse_test.cpp  state_machine_test.cpp  test_main.cpp
projects/klinecharts-sse/: README.md  index.html  package.json  vite.config.ts
projects/klinecharts-sse/src/: index.css
projects/klinecharts-sse/src/app/: App.tsx
projects/klinecharts-sse/src/app/pages/: CandlestickChartPage.tsx  LineChartPage.tsx  chartPage.module.css
projects/klinecharts-sse/src/mocks/: mockSse.ts
projects/three-scatter/: index.html  package.json
projects/three-scatter/src/: index.css
projects/three-scatter/src/app/: App.tsx  app.module.css
projects/three-scatter/src/data/: buildDataJson.mjs  data.json  dataManager.ts  dataset.ts  mock.ts
projects/three-scatter/src/theme/: theme.css  theme.ts
scripts/: build-pages.mjs
(+38 files in other folders)
